Fix login
Now the login works with cookies and refresh tokens. This ends the 2 phase of the TFG, now I will start the git hub flow of the other phases.